--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -367,7 +367,7 @@
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
 <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</a></li>
             </ul>
 
@@ -392,88 +392,13 @@
 
 <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Situation: Employee lives on a reserve or you are a resident on a reserve</a></li>
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a></li>
             </ul>
 
 </li>
 
-<li><h4 id="step3c">Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</h4> 
-<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">
-<ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a></li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
-</ul>
-</li>
-<li class="cnjnctn-col">Worker performs more than 50% of their employment duties on a reserve</li>
-</ul>
-
-<p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-
-<hr>
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3d">Step 3d - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
-            </ul>
-</li>
-
-<li><h4 id="step3d">Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</h4> 
-<details><summary>Situation: Your employee performs <strong>50% or less</strong> of their employment duties on a reserve - Guideline 1 (proration rule)</summary>
-<h4>Partly-exempt income</h4>
- <div id="ajax-prorate-income">
-<p>Generally, the income is partly-exempt from income tax if the employee performs 50% or less of their employment duties on a reserve. </p>
-<p>The exemption is prorated where those duties are not merely incidental to duties they performed off a reserve. The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if <strong>one </strong>of the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Worker lives on a reserve <span class="far fa-question-circle"></span></a> </li>
-<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer or payer is a resident on a reserve <span class="far fa-question-circle"></span></a></li>
-</ul>
-
-<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Example where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
- </div>
-</details>
-
-<details><summary>Situation: Your employee performs <strong>at least 90%</strong> of the duties related to their employment on a reserve - Guideline 1</summary>
-<h4>Exempt income situation</h4>
-<div id="ajax-income-90">
-<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
-
-<p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
-</div>
-
-
-</details>
-
-<details><summary>Situation: Your employee performs <strong>certain duties</strong> related to their employment on a reserve - Guideline 1 (proration rule)</summary>
-<h4>Partly-exempt income</h4>
-<div id="ajax-income-90-not">
-<p>Generally, the income is partly-exempt from income tax. </p>
-<p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
-
-
-<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-</div>
-
-
-</details>
- <hr>
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step5">Step 5 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
-               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Determine the percentage of duties related to employment on a reserve</a>.</li>
-            </ul>
-</li>
-
-</ol>
- 
-</li>
-
-<li>	  
-<h3 id="step4">Determine the percentage of duties related to employment on a reserve</h3>
+<li><h3 id="step3c">Determine the percentage of duties related to employment on a reserve</h3>
  <div id="ajax-how-prorate">
 <p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
@@ -563,8 +488,56 @@
 </details>
 </details>
 </div>
-
+  <p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</a>.</p>
 </li>
+
+<li><h4 id="step3d">Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</h4> 
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
+<li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
+</ul>
+</li>
+<li class="cnjnctn-col">Employee performs more than 50% of their employment duties on a reserve</li>
+</ul>
+
+<p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
+
+<hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
+            </ul>
+</li>
+
+<li><h4 id="step3e">Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</h4> 
+
+<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+
+<p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
+
+<h4>Partly-exempt income - Guideline 1 (proration rule)</h4>
+<p>Generally, the income is partly-exempt from income tax if your employee performs certain duties related to their employment on a reserve.</p>
+<p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
+<p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+<p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
+</div>
+
+ <hr>
+ <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+              <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
+               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</li>
+            </ul>
+</li>
+
+</ol>
+ 
+</li>
+
 
 <li><h3 id="step5">Withhold and report the payment on a T4 slip</h3>
 <div id="ajax-t4-how-emp-intro">
@@ -1015,7 +988,7 @@
 </nav>
 
 
-<section id="reg" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine if the worker is registered</h2>
+<section id="reg" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">How to determine if the employee is registered</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="#ajax-reg"></div>
 	</div></section>
