--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -355,8 +355,8 @@
 <p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
 <ol class="lst-stps-sub">
 
-<li><h4 id="step3a">Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</h4>  
-<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<li><details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
+<p id="step3a">Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
@@ -371,10 +371,10 @@
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</a></li>
             </ul>
 
-</li>
+</details></li>
 
-<li><h4 id="step3b">Situation: You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</h4>  
-<p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
+<li><details><summary>Situation: You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</summary>
+<p id="step3b">Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -396,11 +396,11 @@
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a></li>
             </ul>
 
-</li>
+</details></li>
 
-<li><h3 id="step3c">Determine the percentage of duties related to employment on a reserve</h3>
+<li><details><summary>Determine the percentage of duties related to employment on a reserve</summary>
  <div id="ajax-how-prorate">
-<p>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
+<p id="step3c>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
@@ -489,10 +489,10 @@
 </details>
 </div>
   <p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</a>.</p>
-</li>
+</details></li>
 
-<li><h4 id="step3d">Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</h4> 
-<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<li><details><summary>Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</summary>
+<p id="step3d">Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="list-unstyled cnjnctn-type-or">
@@ -511,11 +511,10 @@
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
             </ul>
-</li>
+</details></li>
 
-<li><h4 id="step3e">Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</h4> 
-
-<p>Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
+<li><details><summary>Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</summary>
+<p id="step3e">Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1b" aria-controls="ajax-example1b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
@@ -532,14 +531,13 @@
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</li>
             </ul>
-</li>
+</details></li>
 
 </ol>
- 
-</li>
+ </li>
 
 
-<li><h3 id="step5">Withhold and report the payment on a T4 slip</h3>
+<li><h3 id="step4">Withhold and report the payment on a T4 slip</h3>
 <div id="ajax-t4-how-emp-intro">
 <p class="mrgn-bttm-lg">Generally, you must withhold the following deductions and report on a <strong>T4 slip</strong> the payment you made to your employee:</p>
 </div>
