--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -400,7 +400,7 @@
 
 <li><details><summary>Determine the percentage of duties related to employment on a reserve</summary>
  <div id="ajax-how-prorate">
-<p id="step3c>To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
+<p id="step3c">To determine the portion of employment duties performed on a reserve, two factors are generally taken into account:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Whether an actual "duty of employment" was performed (the employee was required to perform the particular task and was compensated by the employer for performing that particular task)</li>
@@ -524,7 +524,7 @@
 <p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-</div>
+
 
  <hr>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
