anchor link to part 4

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -918,7 +918,7 @@ html:lang(fr) .cnjnctn-or:before {
         <p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
       </li>
       <li>
-        <h3>Part 4 - Exemption for primary place of residence</h3>
+        <h3 id="pt4">Part 4 - Exemption for primary place of residence</h3>
         <p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
         <p>If you own multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> to <strong>claim this exemption</strong>.</p>
         <p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
