--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -774,9 +774,9 @@ html:lang(fr) .cnjnctn-or:before {
 <ul><li><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtFlng?request_locale=en_CA" target="_blank">Online form for the Underused Housing Tax return</a></li></ul>
   <ul><ul><li>When you file your return, you will be presented with a list of requirements to complete your submission</li></ul></ul>
 	       <ul><ul><li>One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&amp;utm_medium=News_Item" target="_blank">get a Digital Access Code (DAC)</a></li></ul></ul>
-
+<p>The following options are available to <strong>Canadian citizens and permanent residents only</strong>:</p>
 <details>
-	<summary class="mrgn-tp-md">If you are filing as an <strong>individual</strong> (Canadian citizens and permanent residents only)</summary>
+	<summary class="mrgn-tp-md">If you are filing as an <strong>individual</strong></summary>
 
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-individuals/account-individuals.html" target="_blank">My Account for Individuals</a></p>
     <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Account for Individuals</li></ul></ul>
@@ -785,7 +785,7 @@ html:lang(fr) .cnjnctn-or:before {
 </details>
 
 	      <details>
-		      <summary>If you are filing as a <strong>Canadian corporation</strong> (Canadian citizens and permanent residents only)</summary>
+		      <summary>If you are filing as a <strong>Canadian corporation</strong></summary>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html" target="_blank">My Business Account</a></p>
      <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA My Business Account</li></ul>
 	     
@@ -794,7 +794,7 @@ html:lang(fr) .cnjnctn-or:before {
 </details>
 
 	      <details>
-		      <summary>If you are filing for an <strong>individual</strong> or <strong>Canadian corporation</strong> (Canadian citizens and permanent residents only)</summary>
+		      <summary>If you are filing for an <strong>individual</strong> or <strong>Canadian corporation</strong></summary>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html" target="_blank">Represent a Client</a></p>
      <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA Represent a Client</li></ul>
 	     
