--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -770,7 +770,8 @@ html:lang(fr) .cnjnctn-or:before {
      
 	  <dt>Electronically</dt>
       <dd>
-<p>There are different options for electronically submitting your return. Whether you are an <strong>individual</strong> or a <strong>corporation</strong>, you can submit the return using:</p>
+<p>There are different options for electronically submitting your return.</p>
+	      <p><strong>Individuals</strong> or <strong>corporations</strong> can submit the return using:</p>
 <ul><li><a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtFlng?request_locale=en_CA" target="_blank">Online form for the Underused Housing Tax return</a></li></ul>
   <ul><ul><li>When you file your return, you will be presented with a list of requirements to complete your submission</li></ul></ul>
 	       <ul><ul><li>One of the requirements is to <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrDc.action?utm_source=Canada_dot_ca&amp;utm_medium=News_Item" target="_blank">get a Digital Access Code (DAC)</a></li></ul></ul>
