--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -874,7 +874,7 @@ html:lang(fr) .cnjnctn-or:before {
             <ul>
               <li>The residential property's most recent sale price, on or before December 31 of the calendar year</li>
             </ul>
-            <p class="mrgn-tp-md">For more detailed information, review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">UHTN2 - Calculating the tax payable using the taxable value</a></p>
+            <p class="mrgn-tp-md">For more detailed information, review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881" target="_blank">UHTN2 - Calculating the tax payable using the taxable value</a></p>
           </details>
           <p class="mrgn-tp-md">If you want to use the residential property's fair market value to make your calculation, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
         </details>
