--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -874,7 +874,7 @@ html:lang(fr) .cnjnctn-or:before {
             <ul>
               <li>The residential property's most recent sale price, on or before December 31 of the calendar year</li>
             </ul>
-            <p class="mrgn-tp-md">For more detailed information, review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881" target="_blank">UHTN2 - Calculating the tax payable using the taxable value</a></p>
+            <p class="mrgn-tp-md">Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881" target="_blank">UHTN2, Calculating the tax payable using the taxable value</a></p>
           </details>
           <p class="mrgn-tp-md">If you want to use the residential property's fair market value to make your calculation, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
         </details>
@@ -922,12 +922,13 @@ html:lang(fr) .cnjnctn-or:before {
         <p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
         <p>If you own multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> to <strong>claim this exemption</strong>.</p>
         <p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
-        <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683">Exemption for residential properties that are used a primary place of residence</a> </li>
+       <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683" target="_blank">UHTN6, Exemption for residential properties that are used a primary place of residence</a></p>
+      </li>
       <li>
         <h3>Part 5 - Exemption for qualifying occupancy</h3>
         <p>If you are an individual who owns multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> for your personal occupancy to be included in a qualifying occupancy period.</p>
         <p><a class="wb-lbx" href="#qual-occ-ajax">Qualifying <span class="nowrap">occupancy<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
-        <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683">Exemption for residential properties that are used for qualifying occupancy</a> </li>
+        <p>Review tax notice:<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">UHTN7, Exemption for residential properties that are used for qualifying occupancy</a> </li>
       <li>
         <h3>Part 6 - Other exemptions</h3>
         <p>Complete this part if your ownership of the residential property is exempt for reasons <strong>other than</strong> primary place of residence or qualifying occupancy.</p>
@@ -964,7 +965,7 @@ html:lang(fr) .cnjnctn-or:before {
             </ul>
             <p class="mrgn-tp-md">If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a>.</p>
           </details>
-          <p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883">Calculating the tax payable using the FMV</a>.</p>
+          <p class="mrgn-tp-md">Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883" target="_blank">UHTN2, Calculating the tax payable using the FMV</a>.</p>
         </details>
       </li>
       <li>
@@ -987,7 +988,7 @@ html:lang(fr) .cnjnctn-or:before {
             <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Your ownership percentage)</span></li>
             <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,500 (Underused Housing Tax amount owed for the 2023 calendar year)</span></li>
           </ul>
-          For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091879">Calculating tax payable</a> </details>
+          Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091879" target="_blank">UHTN2, Calculating tax payable</a> </details>
       </li>
     </ol>
     <section id="primary-res-ajax" class="mfp-hide modal-dialog modal-content overlay-def">
