--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -355,8 +355,9 @@
 <p>You can use the employment income guidance for common employment situations to determine if the employment income is tax-exempt or partially tax-exempt.</p>
 <ol class="lst-stps-sub">
 
-<li><details><summary>Situation: Your employee lives on a reserve and you are a resident on a reserve - Guideline 2</summary>
-<p id="step3a">Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
+<li><h4 id="step3a">Determine if the guideline 2 applies</h4>
+<details><summary>Your employee lives on a reserve and you are a resident on a reserve</summary>
+<p>Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="#ajax-def3" aria-controls="ajax-def3" class="overlay-lnk" role="button">Employee lives on a reserve <span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><a href="#ajax-def1" aria-controls="ajax-def1" class="overlay-lnk" role="button">Employer is a resident on a reserve <span class="far fa-question-circle"></span></a> </li>
@@ -366,12 +367,14 @@
 <p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
 <hr>
- <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+ 
+
+</details>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> live on a reserve <strong>or</strong> you are <strong>not</strong> a resident on a reserve, continue to <a href="#step3b">Step 3b - You are an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</a></li>
             </ul>
-
-</details></li>
+</li>
 
 <li><details><summary>Situation: You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</summary>
 <p id="step3b">Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
