--- a/payroll/calculate/payment/first-nations.html
+++ b/payroll/calculate/payment/first-nations.html
@@ -366,9 +366,6 @@
 <p><a href="#ajax-example2a" aria-controls="ajax-example2a" class="overlay-lnk" role="button">Examples where exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example2b" aria-controls="ajax-example2b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 2) <span class="far fa-question-circle"></span></a> </p>
 <p>Where an employee is a shareholder who controls the business (non-arm's length with the corporation), the source of the business income may be relevant in determining whether the tax exemption under section 87 of the Indian Act applies to the income received in the shareholder's capacity as an employee. Where the source of the business income in this situation is off the reserve, the employment income (salary and bonuses) will not be considered to be connected to the reserve and will not be exempt from tax. </p>
-<hr>
- 
-
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee lives on a reserve <strong>and</strong> you a resident on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
@@ -376,8 +373,9 @@
             </ul>
 </li>
 
-<li><details><summary>Situation: You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves - Guideline 4</summary>
-<p id="step3b">Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
+<li><h4 id="step3b">Determine if the guideline 4 applies</h4>
+<details><summary>You are Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves</summary>
+<p>Generally, the income is exempt from income tax if the employer is <strong>all </strong>of the following:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -393,13 +391,13 @@
 <p> <a href="#ajax-example4a" aria-controls="ajax-example4a" class="overlay-lnk" role="button">Examples where exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example4b" aria-controls="ajax-example4b" class="overlay-lnk" role="button">Examples where <strong>not</strong> exempt (guideline 4) <span class="far fa-question-circle"></span></a> </p>
 
-<hr>
+</details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee meets all conditions of an Indian band or organization and your employee’s duties of employment are in connection with your non-commercial activities carried on exclusively for the benefit of Indians who for the most part live on reserves, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong></li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee <strong>does not</strong> meet all conditions or the situation <strong>does not</strong> apply, continue to <a href="#step3c">Step 3c - Determine the percentage of duties related to employment on a reserve</a></li>
             </ul>
 
-</details></li>
+</li>
 
 <li><details><summary>Determine the percentage of duties related to employment on a reserve</summary>
  <div id="ajax-how-prorate">
@@ -494,7 +492,8 @@
   <p><span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to <a href="#step3d">Step 3d - Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</a>.</p>
 </details></li>
 
-<li><details><summary>Situation: Employee lives on a reserve or you are a resident on a reserve - Guidelines 3</summary>
+<li><h4 id="step3d">Determine if the guideline 3 applies</h4>
+<details><summary>Employee lives on a reserve or you are a resident on a reserve</summary>
 <p id="step3d">Generally, the income is exempt from income tax if <strong>all </strong>of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">
@@ -508,15 +507,16 @@
 
 <p> <a href="#ajax-example3a" aria-controls="ajax-example3a" class="overlay-lnk" role="button">Example where exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example3b" aria-controls="ajax-example3b" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 3) <span class="far fa-question-circle"></span></a> </p>
-
-<hr>
+</details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs more than 50% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs 50% or less of their employment duties on a reserve, continue to <a href="#step3e">Step 3e - Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</a>.</li>
             </ul>
-</details></li>
 
-<li><details><summary>Situation: Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve - Guideline 1</summary>
+</li>
+
+<li><h4 id="step3e">Determine if the guideline 1 applies</h4>
+<details><summary>Employee does not live on a reserve and you are not resident on a reserve but the employee is required to perform duties on a reserve</summary>
 <p id="step3e">Generally, the income is exempt from income tax if the employee performs at least 90% of the duties related to their employment on a reserve.</p>
 
 <p><a href="#ajax-example1a" aria-controls="ajax-example1a" class="overlay-lnk" role="button">Examples where exempt (guideline 1) <span class="far fa-question-circle"></span></a> </p>
@@ -527,14 +527,12 @@
 <p>The exemption is prorated to the portion of the income related to the duties the employee performed on the reserve if the employee performs certain duties related to their employment on a reserve.</p>
 <p> <a href="#ajax-example1apro" aria-controls="ajax-example1apro" class="overlay-lnk" role="button">Examples where exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
 <p> <a href="#ajax-example1bpro" aria-controls="ajax-example1bpro" class="overlay-lnk" role="button">Example where <strong>not</strong> exempt (guideline 1 - proration rule) <span class="far fa-question-circle"></span></a> </p>
-
-
- <hr>
+</details>
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs at least 90% of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income all exempt</strong>.</li>
                <li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If your employee performs certain duties of their employment duties on a reserve, continue to <a href="#step4">Step 4 - Withhold and report the payment on a T4 slip</a> and select <strong>income partly-exempt</strong>.</li>
             </ul>
-</details></li>
+</li>
 
 </ol>
  </li>
